1.1.0
   - bug [11170] "Kan vi slette replaceObject metoden fra IObjectRepository"
   - bug [11181] "IObjectRepository.getIdentifiers metoderne"
   - bug [11172] "Der er to IObjectRepository.getDataFromObject metoder, ingen af dem bruges"
   - bug [11173] "IObjectRepository.deleteDataFromObejct metoden bruges ikke."
   - bug [11184] "AdministrationFunc virker som et værktøj til test eller drift end en funktionel test"
   - bug [11187] "tests/functionaltests/dk/dbc/opensearch/plugins mappen er tom og bør fjernes"
   - bug [11164] "Datadock lukker ikke ned selvom man giver "bench" som option til app_starter.py"
   - bug [11164] "Datadock lukker ikke ned selvom man giver "bench" som option til app_starter.py"
   - bug [11175] "IObjectrepository.getObejctRelations( ObjectIdentifier objectIdentifier) metoden bruges ikke"
   - bug [11179] "IObjectRepository.getIdentifiersUnqualilfied"
   - bug [11180] "Bruges FedoraMain klassen?"
   - bug [11174] "Har vi brug for to Pair implementeringer?"
   - bug [11168] "SimpleTest mangler unittest"
   - bug [11167] "Hvad bruges src/dk/dbc/opensearch/components/datadock/config.xml til?"
   - bug [11165] "Bør Pair.java ikke hedde IPair.java for at leve op til vores måde at definere interfaces på?"
   - bug [11166] "ThrownInfo.java bruges ikke og kan slettes"
   - bug [10734] "XMLDCHarvesterTest skal refaktoreres"
   - bug [11160] "DatadockJob, Job, IJob skal samles til een klasse"
   - bug [11159] "HarvestType enum i common/types skal gøres til privat enum i DatadockMain"
   - bug [11099] "Datadock lukker ikke korrekt ned når/selvom JVM'en får et SIGTERM signal"
   - bug [11115] "Bruges FedoraAuxiliaryMain?"
   - bug [11117] "Efter refaktorering af DatadockMain mangler den test"
   - bug [11103] "Processqueue og PTIManager bruger Vector, skal nok være ArrayList"
   - bug [10936] "XMLDCHarvester pluginnet skal laves om til at benytte et javascript"
   - bug [10172] "Der mangler metode i DatadockJob til at hente language og mimetype"